bnfc/Parser.output
Terminals unused in grammar

    _ERROR_


Grammar

    0 $accept: Input $end

    1 Input: ListJob

    2 Job: Condition
    3    | Condition _AMP
    4    | T_Assign
    5    | _KW_if Condition _KW_then ListJob OptElse _KW_fi
    6    | _KW_for T_Word _KW_in ListWord _KW_do ListJob _KW_done
    7    | _KW_while Condition _KW_do ListJob _KW_done
    8    | _KW_until Condition _KW_do ListJob _KW_done
    9    | _KW_break
   10    | _KW_continue

   11 ListJob: Job
   12        | Job _SEMI ListJob

   13 OptElse: ε
   14        | _KW_else ListJob
   15        | _KW_elif Condition _KW_then ListJob OptElse

   16 Condition: NegCmd
   17          | NegCmd _DAMP Condition
   18          | NegCmd _DBAR Condition

   19 NegCmd: CommandLine
   20       | _BANG NegCmd
   21       | _KW_time NegCmd
   22       | _LPAREN ListJob _RPAREN
   23       | _LBRACE ListJob _RBRACE

   24 CommandLine: Pipeline OptRedir

   25 OptRedir: ε
   26         | _SYMB_9 T_Word
   27         | _SYMB_10 T_Word
   28         | _SYMB_11 T_Word
   29         | _DGT T_Word
   30         | _GT T_Word
   31         | _LT T_Word
   32         | _LT T_Word _GT T_Word
   33         | _GT T_Word _LT T_Word

   34 Pipeline: CommandPart
   35         | CommandPart _BAR Pipeline

   36 Arg: T_Word
   37    | T_ArithExp

   38 ListArg: ε
   39        | ListArg Arg

   40 CommandPart: Arg ListArg

   41 ListWord: ε
   42         | T_Word ListWord


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    _ERROR_ (258)
    _BANG (259) 20
    _AMP (260) 3
    _DAMP (261) 17
    _SYMB_11 (262) 28
    _LPAREN (263) 22
    _RPAREN (264) 22
    _SYMB_10 (265) 27
    _SYMB_9 (266) 26
    _SEMI (267) 12
    _LT (268) 31 32 33
    _GT (269) 30 32 33
    _DGT (270) 29
    _KW_break (271) 9
    _KW_continue (272) 10
    _KW_do (273) 6 7 8
    _KW_done (274) 6 7 8
    _KW_elif (275) 15
    _KW_else (276) 14
    _KW_fi (277) 5
    _KW_for (278) 6
    _KW_if (279) 5
    _KW_in (280) 6
    _KW_then (281) 5 15
    _KW_time (282) 21
    _KW_until (283) 8
    _KW_while (284) 7
    _LBRACE (285) 23
    _BAR (286) 35
    _DBAR (287) 18
    _RBRACE (288) 23
    T_ArithExp <_string> (289) 37
    T_Assign <_string> (290) 4
    T_Word <_string> (291) 6 26 27 28 29 30 31 32 33 36 42


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Input <input_> (38)
        on left: 1
        on right: 0
    Job <job_> (39)
        on left: 2 3 4 5 6 7 8 9 10
        on right: 11 12
    ListJob <listjob_> (40)
        on left: 11 12
        on right: 1 5 6 7 8 12 14 15 22 23
    OptElse <optelse_> (41)
        on left: 13 14 15
        on right: 5 15
    Condition <condition_> (42)
        on left: 16 17 18
        on right: 2 3 5 7 8 15 17 18
    NegCmd <negcmd_> (43)
        on left: 19 20 21 22 23
        on right: 16 17 18 20 21
    CommandLine <commandline_> (44)
        on left: 24
        on right: 19
    OptRedir <optredir_> (45)
        on left: 25 26 27 28 29 30 31 32 33
        on right: 24
    Pipeline <pipeline_> (46)
        on left: 34 35
        on right: 24 35
    Arg <arg_> (47)
        on left: 36 37
        on right: 39 40
    ListArg <listarg_> (48)
        on left: 38 39
        on right: 39 40
    CommandPart <commandpart_> (49)
        on left: 40
        on right: 34 35
    ListWord <listword_> (50)
        on left: 41 42
        on right: 6 42


State 0

    0 $accept: • Input $end

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Input        go to state 14
    Job          go to state 15
    ListJob      go to state 16
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 1

   20 NegCmd: _BANG • NegCmd

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    NegCmd       go to state 23
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 2

   22 NegCmd: _LPAREN • ListJob _RPAREN

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 24
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 3

    9 Job: _KW_break •

    $default  reduce using rule 9 (Job)


State 4

   10 Job: _KW_continue •

    $default  reduce using rule 10 (Job)


State 5

    6 Job: _KW_for • T_Word _KW_in ListWord _KW_do ListJob _KW_done

    T_Word  shift, and go to state 25


State 6

    5 Job: _KW_if • Condition _KW_then ListJob OptElse _KW_fi

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Condition    go to state 26
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 7

   21 NegCmd: _KW_time • NegCmd

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    NegCmd       go to state 27
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 8

    8 Job: _KW_until • Condition _KW_do ListJob _KW_done

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Condition    go to state 28
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 9

    7 Job: _KW_while • Condition _KW_do ListJob _KW_done

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Condition    go to state 29
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 10

   23 NegCmd: _LBRACE • ListJob _RBRACE

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 30
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 11

   37 Arg: T_ArithExp •

    $default  reduce using rule 37 (Arg)


State 12

    4 Job: T_Assign •

    $default  reduce using rule 4 (Job)


State 13

   36 Arg: T_Word •

    $default  reduce using rule 36 (Arg)


State 14

    0 $accept: Input • $end

    $end  shift, and go to state 31


State 15

   11 ListJob: Job •
   12        | Job • _SEMI ListJob

    _SEMI  shift, and go to state 32

    $default  reduce using rule 11 (ListJob)


State 16

    1 Input: ListJob •

    $default  reduce using rule 1 (Input)


State 17

    2 Job: Condition •
    3    | Condition • _AMP

    _AMP  shift, and go to state 33

    $default  reduce using rule 2 (Job)


State 18

   16 Condition: NegCmd •
   17          | NegCmd • _DAMP Condition
   18          | NegCmd • _DBAR Condition

    _DAMP  shift, and go to state 34
    _DBAR  shift, and go to state 35

    $default  reduce using rule 16 (Condition)


State 19

   19 NegCmd: CommandLine •

    $default  reduce using rule 19 (NegCmd)


State 20

   24 CommandLine: Pipeline • OptRedir

    _SYMB_11  shift, and go to state 36
    _SYMB_10  shift, and go to state 37
    _SYMB_9   shift, and go to state 38
    _LT       shift, and go to state 39
    _GT       shift, and go to state 40
    _DGT      shift, and go to state 41

    $default  reduce using rule 25 (OptRedir)

    OptRedir  go to state 42


State 21

   40 CommandPart: Arg • ListArg

    $default  reduce using rule 38 (ListArg)

    ListArg  go to state 43


State 22

   34 Pipeline: CommandPart •
   35         | CommandPart • _BAR Pipeline

    _BAR  shift, and go to state 44

    $default  reduce using rule 34 (Pipeline)


State 23

   20 NegCmd: _BANG NegCmd •

    $default  reduce using rule 20 (NegCmd)


State 24

   22 NegCmd: _LPAREN ListJob • _RPAREN

    _RPAREN  shift, and go to state 45


State 25

    6 Job: _KW_for T_Word • _KW_in ListWord _KW_do ListJob _KW_done

    _KW_in  shift, and go to state 46


State 26

    5 Job: _KW_if Condition • _KW_then ListJob OptElse _KW_fi

    _KW_then  shift, and go to state 47


State 27

   21 NegCmd: _KW_time NegCmd •

    $default  reduce using rule 21 (NegCmd)


State 28

    8 Job: _KW_until Condition • _KW_do ListJob _KW_done

    _KW_do  shift, and go to state 48


State 29

    7 Job: _KW_while Condition • _KW_do ListJob _KW_done

    _KW_do  shift, and go to state 49


State 30

   23 NegCmd: _LBRACE ListJob • _RBRACE

    _RBRACE  shift, and go to state 50


State 31

    0 $accept: Input $end •

    $default  accept


State 32

   12 ListJob: Job _SEMI • ListJob

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 51
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 33

    3 Job: Condition _AMP •

    $default  reduce using rule 3 (Job)


State 34

   17 Condition: NegCmd _DAMP • Condition

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Condition    go to state 52
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 35

   18 Condition: NegCmd _DBAR • Condition

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Condition    go to state 53
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 36

   28 OptRedir: _SYMB_11 • T_Word

    T_Word  shift, and go to state 54


State 37

   27 OptRedir: _SYMB_10 • T_Word

    T_Word  shift, and go to state 55


State 38

   26 OptRedir: _SYMB_9 • T_Word

    T_Word  shift, and go to state 56


State 39

   31 OptRedir: _LT • T_Word
   32         | _LT • T_Word _GT T_Word

    T_Word  shift, and go to state 57


State 40

   30 OptRedir: _GT • T_Word
   33         | _GT • T_Word _LT T_Word

    T_Word  shift, and go to state 58


State 41

   29 OptRedir: _DGT • T_Word

    T_Word  shift, and go to state 59


State 42

   24 CommandLine: Pipeline OptRedir •

    $default  reduce using rule 24 (CommandLine)


State 43

   39 ListArg: ListArg • Arg
   40 CommandPart: Arg ListArg •

    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    $default  reduce using rule 40 (CommandPart)

    Arg  go to state 60


State 44

   35 Pipeline: CommandPart _BAR • Pipeline

    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Pipeline     go to state 61
    Arg          go to state 21
    CommandPart  go to state 22


State 45

   22 NegCmd: _LPAREN ListJob _RPAREN •

    $default  reduce using rule 22 (NegCmd)


State 46

    6 Job: _KW_for T_Word _KW_in • ListWord _KW_do ListJob _KW_done

    T_Word  shift, and go to state 62

    $default  reduce using rule 41 (ListWord)

    ListWord  go to state 63


State 47

    5 Job: _KW_if Condition _KW_then • ListJob OptElse _KW_fi

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 64
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 48

    8 Job: _KW_until Condition _KW_do • ListJob _KW_done

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 65
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 49

    7 Job: _KW_while Condition _KW_do • ListJob _KW_done

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 66
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 50

   23 NegCmd: _LBRACE ListJob _RBRACE •

    $default  reduce using rule 23 (NegCmd)


State 51

   12 ListJob: Job _SEMI ListJob •

    $default  reduce using rule 12 (ListJob)


State 52

   17 Condition: NegCmd _DAMP Condition •

    $default  reduce using rule 17 (Condition)


State 53

   18 Condition: NegCmd _DBAR Condition •

    $default  reduce using rule 18 (Condition)


State 54

   28 OptRedir: _SYMB_11 T_Word •

    $default  reduce using rule 28 (OptRedir)


State 55

   27 OptRedir: _SYMB_10 T_Word •

    $default  reduce using rule 27 (OptRedir)


State 56

   26 OptRedir: _SYMB_9 T_Word •

    $default  reduce using rule 26 (OptRedir)


State 57

   31 OptRedir: _LT T_Word •
   32         | _LT T_Word • _GT T_Word

    _GT  shift, and go to state 67

    $default  reduce using rule 31 (OptRedir)


State 58

   30 OptRedir: _GT T_Word •
   33         | _GT T_Word • _LT T_Word

    _LT  shift, and go to state 68

    $default  reduce using rule 30 (OptRedir)


State 59

   29 OptRedir: _DGT T_Word •

    $default  reduce using rule 29 (OptRedir)


State 60

   39 ListArg: ListArg Arg •

    $default  reduce using rule 39 (ListArg)


State 61

   35 Pipeline: CommandPart _BAR Pipeline •

    $default  reduce using rule 35 (Pipeline)


State 62

   42 ListWord: T_Word • ListWord

    T_Word  shift, and go to state 62

    $default  reduce using rule 41 (ListWord)

    ListWord  go to state 69


State 63

    6 Job: _KW_for T_Word _KW_in ListWord • _KW_do ListJob _KW_done

    _KW_do  shift, and go to state 70


State 64

    5 Job: _KW_if Condition _KW_then ListJob • OptElse _KW_fi

    _KW_elif  shift, and go to state 71
    _KW_else  shift, and go to state 72

    $default  reduce using rule 13 (OptElse)

    OptElse  go to state 73


State 65

    8 Job: _KW_until Condition _KW_do ListJob • _KW_done

    _KW_done  shift, and go to state 74


State 66

    7 Job: _KW_while Condition _KW_do ListJob • _KW_done

    _KW_done  shift, and go to state 75


State 67

   32 OptRedir: _LT T_Word _GT • T_Word

    T_Word  shift, and go to state 76


State 68

   33 OptRedir: _GT T_Word _LT • T_Word

    T_Word  shift, and go to state 77


State 69

   42 ListWord: T_Word ListWord •

    $default  reduce using rule 42 (ListWord)


State 70

    6 Job: _KW_for T_Word _KW_in ListWord _KW_do • ListJob _KW_done

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 78
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 71

   15 OptElse: _KW_elif • Condition _KW_then ListJob OptElse

    _BANG       shift, and go to state 1
    _LPAREN     shift, and go to state 2
    _KW_time    shift, and go to state 7
    _LBRACE     shift, and go to state 10
    T_ArithExp  shift, and go to state 11
    T_Word      shift, and go to state 13

    Condition    go to state 79
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 72

   14 OptElse: _KW_else • ListJob

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 80
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 73

    5 Job: _KW_if Condition _KW_then ListJob OptElse • _KW_fi

    _KW_fi  shift, and go to state 81


State 74

    8 Job: _KW_until Condition _KW_do ListJob _KW_done •

    $default  reduce using rule 8 (Job)


State 75

    7 Job: _KW_while Condition _KW_do ListJob _KW_done •

    $default  reduce using rule 7 (Job)


State 76

   32 OptRedir: _LT T_Word _GT T_Word •

    $default  reduce using rule 32 (OptRedir)


State 77

   33 OptRedir: _GT T_Word _LT T_Word •

    $default  reduce using rule 33 (OptRedir)


State 78

    6 Job: _KW_for T_Word _KW_in ListWord _KW_do ListJob • _KW_done

    _KW_done  shift, and go to state 82


State 79

   15 OptElse: _KW_elif Condition • _KW_then ListJob OptElse

    _KW_then  shift, and go to state 83


State 80

   14 OptElse: _KW_else ListJob •

    $default  reduce using rule 14 (OptElse)


State 81

    5 Job: _KW_if Condition _KW_then ListJob OptElse _KW_fi •

    $default  reduce using rule 5 (Job)


State 82

    6 Job: _KW_for T_Word _KW_in ListWord _KW_do ListJob _KW_done •

    $default  reduce using rule 6 (Job)


State 83

   15 OptElse: _KW_elif Condition _KW_then • ListJob OptElse

    _BANG         shift, and go to state 1
    _LPAREN       shift, and go to state 2
    _KW_break     shift, and go to state 3
    _KW_continue  shift, and go to state 4
    _KW_for       shift, and go to state 5
    _KW_if        shift, and go to state 6
    _KW_time      shift, and go to state 7
    _KW_until     shift, and go to state 8
    _KW_while     shift, and go to state 9
    _LBRACE       shift, and go to state 10
    T_ArithExp    shift, and go to state 11
    T_Assign      shift, and go to state 12
    T_Word        shift, and go to state 13

    Job          go to state 15
    ListJob      go to state 84
    Condition    go to state 17
    NegCmd       go to state 18
    CommandLine  go to state 19
    Pipeline     go to state 20
    Arg          go to state 21
    CommandPart  go to state 22


State 84

   15 OptElse: _KW_elif Condition _KW_then ListJob • OptElse

    _KW_elif  shift, and go to state 71
    _KW_else  shift, and go to state 72

    $default  reduce using rule 13 (OptElse)

    OptElse  go to state 85


State 85

   15 OptElse: _KW_elif Condition _KW_then ListJob OptElse •

    $default  reduce using rule 15 (OptElse)
